Added browser icons and install packages. Updated setup.

--- a/artivity-apid/artivity-apid.desktop
+++ b/artivity-apid/artivity-apid.desktop
@@ -4,7 +4,7 @@ Exec=~/.local/bin/artivity-apid
 Hidden=false
 NoDisplay=false
 X-GNOME-Autostart-enabled=true
-Name[en_US]=Artivity Browser API
-Name=Artivity Browser API
+Name[en_US]=Artivity Browser Support
+Name=Artivity Browser Support
 Comment[en_US]=Track your art related browsing activities.
 Comment=Track your art related browsing activities.
