--- a/browser-extension-chrome/manifest.json
+++ b/browser-extension-chrome/manifest.json
@@ -2,8 +2,12 @@
   "manifest_version": 2,
 
   "name": "Artivity",
-  "description": "This extension tracks the webpages you visit in the Zeigeist log.",
+  "description": "This extension captures the webpages you visit in the Zeigeist log.",
   "version": "1.0",
+
+  "icons": { "16": "icon16.png",
+           "48": "icon48.png",
+          "128": "icon128.png" },
 
   "browser_action": {
     "default_icon": "icon-enabled.png",
