--- a/browser-extension-chrome/manifest.json
+++ b/browser-extension-chrome/manifest.json
@@ -14,6 +14,10 @@
     "default_popup": "popup.html"
   },
 
+  "background": {
+      "scripts": ["background.js"]
+  },
+
   "content_scripts": [{
       "matches" : ["*://*/*"],
       "js": ["content.js"],
@@ -21,7 +25,6 @@
   }],
 
   "permissions": [
-    "activeTab",
-    "https://ajax.googleapis.com/"
+    "activeTab", "http://localhost/", "http://localhost:8272/"
   ]
 }
