Inkscape now pushes editing cycle information to log. Inkscape editing events are now classified using a custom ontology. Removed event type info from the payload format in Inkscape. Changed transition type in Artivity Explorer. Artivity API daemon now persists the actor states when being shutdown.

--- a/.hgignore
+++ b/.hgignore
@@ -1,4 +1,9 @@
 syntax: glob
+*.1
+*.in
+*.plist
+*.pot
+*.spec
 *.pyc
 *.swp
 *.swo
@@ -11,3 +16,4 @@ syntax: glob
 *.cache*
 Debug
 inkscape/build/*
+configure
