--- a/artivity-explorer/artivity-explorer.desktop
+++ b/artivity-explorer/artivity-explorer.desktop
@@ -4,6 +4,7 @@ Exec=/usr/bin/artivity-explorer
 Hidden=false
 NoDisplay=false
 X-GNOME-Autostart-enabled=false
+Icon=/usr/share/icons/Artivity/128x128/artivity-explorer.png
 Name[en_US]=Artivity Explorer
 Name=Artivity Explorer
 Comment[en_US]=View data captured during the creation process of graphics files.
