--- a/inkscape/Makefile.in
+++ b/inkscape/Makefile.in
@@ -115,7 +115,7 @@ DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(srcdir)/inkview.1.in ABOUT-NLS AUTHORS COPYING COPYING.LIB \
 	ChangeLog INSTALL NEWS README build-aux/ar-lib \
 	build-aux/compile build-aux/config.guess \
-	build-aux/config.rpath build-aux/config.sub build-aux/depcomp \
+	build-aux/config.rpath build-aux/config.sub \
 	build-aux/install-sh build-aux/missing build-aux/ltmain.sh \
 	$(top_srcdir)/build-aux/ar-lib $(top_srcdir)/build-aux/compile \
 	$(top_srcdir)/build-aux/config.guess \
