--- a/Artivity.Api.Http/packages.config
+++ b/Artivity.Api.Http/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Nancy" version="1.2.0" targetFramework="net45" />
   <package id="Nancy.Hosting.Self" version="1.2.0" targetFramework="net45" />
+  <package id="Nancy.Serialization.JsonNet" version="1.2.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
 </packages>
