--- a/Artivity.Api.Model/App.config
+++ b/Artivity.Api.Model/App.config
@@ -8,25 +8,25 @@
 
       <!--http://www.w3.org/1999/02/22-rdf-syntax-ns#-->
       <Ontology Uri="http://www.w3.org/1999/02/22-rdf-syntax-ns#" Prefix="rdf">
-        <FileSource Location="Ontologies\rdf.rdf"/>
+        <FileSource Location="Ontologies/rdf.rdf"/>
       </Ontology>
 
       <!--http://www.w3.org/2000/01/rdf-schema#-->
       <Ontology Uri="http://www.w3.org/2000/01/rdf-schema#" Prefix="rdfs">
-        <FileSource Location="Ontologies\rdfs.n3"/>
+        <FileSource Location="Ontologies/rdfs.n3"/>
       </Ontology>
 
       <!--http://www.w3.org/2002/07/owl#-->
       <Ontology Uri="http://www.w3.org/2002/07/owl#" Prefix="owl">
-        <FileSource Location="Ontologies\owl.n3"/>
+        <FileSource Location="Ontologies/owl.n3"/>
       </Ontology>
 
       <Ontology Uri="http://www.w3.org/ns/activitystreams#" Prefix="as2">
-        <FileSource Location="Ontologies\ActivityStreams2.ttl"/>
+        <FileSource Location="Ontologies/as2.ttl"/>
       </Ontology>
 
       <Ontology Uri="http://www.w3.org/ns/prov#" Prefix="prov">
-        <FileSource Location="Ontologies\prov.ttl"/>
+        <FileSource Location="Ontologies/prov.ttl"/>
       </Ontology>
     </OntologySettings>
 
