REST API for logging browser events now complete. Updated browser extensions.

--- a/Artivity.Api.Http/Artivity.Api.Http.csproj
+++ b/Artivity.Api.Http/Artivity.Api.Http.csproj
@@ -72,6 +72,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Parameters\ActivityParameters.cs" />
+    <Compile Include="Parameters\ActorParameters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\MainModule.cs" />
